fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@
   border-radius: 20px;
   text-align: center;
   /*space between columns*/
-  margin: 1%;
+  margin-bottom: 1%;
   position: relative;
 }
 
